--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
       <img src="image/mpadin.jpg">
     </div>
     <div align="center">
+      <p>(12) 98115-0605</p>
+      <p><a href="https://www.facebook.com/padinmarita/">https://www.facebook.com/padinmarita/</a></p>
       <p>Necessaires com estilos diferenciados, seguindo tendências e tecidos exclusivos.</p>
-      <p>Vendas Atacado e Varejo.</p>
-      <p>Enviamos para todo Brasil.</p>
+      <p>Vendas Atacado e Varejo. Enviamos para todo Brasil.</p>
       <p>Depósito Bancário. </p>
-      <ul>
-        <li><a href="https://www.facebook.com/padinmarita/">https://www.facebook.com/padinmarita/</a>
-        <li>(12) 98115-0605
-      </ul>
     </div>
   </body>
 </html>
