ref #1 adiciona o mp.ico

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Sample "Hello, World" Application</title>
+    <title>Bolsas e Necessaires</title>
+    <link rel="shortcut icon" href="image/mp.ico" />
   </head>
   <body bgcolor=white>
     <div align="center">
