ref #1 mp.ico com fundo transparente

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Bolsas e Necessaires</title>
-    <link rel="shortcut icon" href="image/mp.ico" />
+    <link rel="shortcut icon" href="image/mp_1.ico" />
   </head>
   <body bgcolor=white>
     <div align="center">
