--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </div>
     <div align="center">
       <p><a href="https://www.facebook.com/padinmarita/">https://www.facebook.com/padinmarita/</a> - (12) 98115-0605</p>
+      <p> <a href="">padinmarita@gmail.com</a></p>
       <p>Necessaires com estilos diferenciados, seguindo tendências e tecidos exclusivos.</p>
       <p>Vendas Atacado e Varejo. Enviamos para todo Brasil.</p>
-      <p>Depósito Bancário. </p>
     </div>
   </body>
 </html>
