ref #2 corrige o title da página

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="image/mp_1.ico">
 
-    <title>Template para o carousel Bootstrap</title>
+    <title>Bolsas e Necessaires</title>
 
     <!-- Principal CSS do Bootstrap -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
