--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
   <head>
+    <meta name="description" content="Bolsas, necessaires, acessórios, moda feminina">
+    <meta name="author" content="Fabiano Almeida">
+    <link rel="icon" href="image/mp_1.ico">
+
     <title>Bolsas e Necessaires</title>
-    <link rel="shortcut icon" href="image/mp_1.ico" />
   </head>
   <body bgcolor=white>
     <div align="center">
