--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Estilos customizados para esse template -->
-    <link href="carousel.css" rel="stylesheet">
+    <link href="docs/4.1/examples/carousel/carousel.css" rel="stylesheet">
   </head>
   <body>
 
