ref #2 usando bootstrap, tentando criar um link para 2ª página

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body bgcolor=white>
     <div align="center">
-      <img src="image/mpadin.jpg" height="500">
+      <a href="/docs/home.html"><img src="image/mpadin.jpg" height="500"></a>
     </div>
     <div align="center">
       <p><a href="https://www.facebook.com/padinmarita/">https://www.facebook.com/padinmarita/</a> - (12) 98115-0605</p>
