--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
   <body>
 
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Carousel</a>
+      <nav class="navbar navbar-light fixed-top" style="background-color: #F7EEEE;">
+        <a class="navbar-brand" href="#">MP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,16 +36,15 @@
               <a class="nav-link disabled" href="#">Desativado</a>
             </li>
           </ul>
-          <form class="form-inline mt-2 mt-md-0">
+<!--           <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-          </form>
+          </form> -->
         </div>
       </nav>
     </header>
 
     <main role="main">
-
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -54,31 +53,31 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="first-slide" src="image/love_mon.jpg" alt="First slide">
+            <img class="first-slide" src="image/love_mon_retangulo.png" alt="First slide">
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>Manchete</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Dia das Mães</h1>
+                <p>Uma descrição ...</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="second-slide" src="image/alca_lateral_cerejeira.jpg" alt="Second slide">
+            <img class="second-slide" src="image/alca_lateral_cerejeira_retangulo.jpg" alt="Second slide">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Outra manchete</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Alça Lateral</h1>
+                <p>Breve descrição, detalhes</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="third-slide" src="image/colecao_flores.jpg" alt="Third slide">
+            <img class="third-slide" src="image/colecao_flores_retangular.jpg" alt="Third slide">
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>Outra manchete, pra garantir</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Coleção Flores</h1>
+                <p>Detalhes e descrições</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
               </div>
             </div>
