--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <title>Bolsas e Necessaires</title>
   </head>
-  <body bgcolor=white>
+  <body bgcolor=#F9F4F4>
+
     <div align="center">
       <a href="home.html"><img src="image/mpadin.jpg" height="500"></a>
     </div>
