--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
               <div class="carousel-caption text-left">
                 <h1>Dia das Mães</h1>
                 <p>Uma descrição ...</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Saiba mais</a></p>
               </div>
             </div>
           </div>
@@ -68,17 +68,17 @@
               <div class="carousel-caption">
                 <h1>Alça Lateral</h1>
                 <p>Breve descrição, detalhes</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Saiba mais</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="third-slide" src="image/colecao_flores_retangular.jpg" alt="Third slide">
+            <img class="third-slide" src="image/florais_escura_retangular.jpg" alt="Third slide">
             <div class="container">
               <div class="carousel-caption text-right">
                 <h1>Coleção Flores</h1>
                 <p>Detalhes e descrições</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Saiba mais</a></p>
               </div>
             </div>
           </div>
@@ -104,21 +104,21 @@
         <div class="row">
           <div class="col-lg-4">
             <img class="rounded-circle" src="image/love_mon.jpg" alt="Generic placeholder image" width="140" height="140">
-            <h2>Título</h2>
+            <h2>Dia das Mães</h2>
             <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle" src="image/mp.png" alt="Generic placeholder image" width="140" height="140">
-            <h2>Título</h2>
+            <h2>Marita Padin</h2>
             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle" src="image/colecao_flores.jpg" alt="Generic placeholder image" width="140" height="140">
-            <h2>Título</h2>
+            <h2>Coleções</h2>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -129,8 +129,8 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">Primeiro título de featurezinhas. <span class="text-muted">Supreendente, não?!</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Dia das Mães <span class="text-muted">Sua mãe vai adorar</span></h2>
+            <p class="lead">Bolsas e necessaires com design exclusivo, tecidos superiores de alta qualidade, feitos com o amor que sua mãe merece.</p>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" src="image/love_mon.jpg" alt="Generic placeholder image">
@@ -141,8 +141,8 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Aêêê! <span class="text-muted">Tá legal ou não tá?</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Coleção Flores. <span class="text-muted">Necessaires com alça lateral. </span></h2>
+            <p class="lead">Necessaires com alça lateral.</p>
           </div>
           <div class="col-md-5 order-md-1">
             <img class="featurette-image img-fluid mx-auto" src="image/alca_lateral_cerejeira.jpg" alt="Generic placeholder image">
@@ -153,8 +153,8 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">E, por último, essa aqui. <span class="text-muted">Xeque-mate!</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Coleção Cores de Frida <span class="text-muted">Vários modelos</span></h2>
+            <p class="lead">Presenteie quem você ama.</p>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" src="image/colecao_flores.jpg" alt="Generic placeholder image">
