ref #2 index responsivo; home com navbar e menu

--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Bolsas, necessaires, acessórios, moda feminina">
     <meta name="author" content="Fabiano Almeida">
+
+    <link rel="icon" href="image/mp_1.ico">
+
+    <title>Bolsas e Necessaires</title>
+
+    <!-- Principal CSS do Bootstrap -->
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Estilos customizados para esse template -->
+    <link href="docs/4.1/examples/carousel/carousel.css" rel="stylesheet">
     <link rel="icon" href="image/mp_1.ico">
 
     <title>Bolsas e Necessaires</title>
   </head>
   <body bgcolor=#F9F4F4>
     <div align="center">
-      <a href="home.html"><img src="image/mpadin.jpg" height="500"></a>
+      <div class="col-md-5">
+        <a href="home.html"><img class="featurette-image img-fluid mx-auto" src="image/mpadin.jpg" alt="Generic placeholder image"></a>
+      </div>
     </div>
     <div align="center">
-      <p><a href="https://www.facebook.com/padinmarita/">https://www.facebook.com/padinmarita/</a> - (12) 98115-0605</p>
-      <p> <a href="">padinmarita@gmail.com</a></p>
-      <p>Necessaires com estilos diferenciados, seguindo tendências e tecidos exclusivos.</p>
-      <p>Vendas Atacado e Varejo. Enviamos para todo Brasil.</p>
+      <p><a href="https://www.facebook.com/padinmarita/">https://www.facebook.com/padinmarita/</a> - (12) 98115-0605 <br> <a href="">padinmarita@gmail.com</a> <br> Necessaires com estilos diferenciados, seguindo tendências e tecidos exclusivos. <br> Vendas Atacado e Varejo. Enviamos para todo Brasil.</p>
     </div>
   </body>
 </html>
