--- a/home.html
+++ b/home.html
@@ -19,15 +19,15 @@
   <body>
 
     <header>
-      <nav class="navbar navbar-light fixed-top" style="background-color: #F7EEEE;">
-        <a class="navbar-brand" href="#">MP</a>
+      <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #F7EEEE;">
+        <a class="navbar-brand" href="index.html">Marita Padin</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(atual)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(atual)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
