ref #3 complementa a description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bolsas, necessaires, acessórios, moda feminina">
+    <meta name="description" content="Marita Padin, Bolsas, necessaires, acessórios, moda feminina">
     <meta name="author" content="Fabiano Almeida">
 
     <link rel="icon" href="image/mp_1.ico">
