--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Marita Padin, Bolsas, necessaires, acessórios, moda feminina">
+    <meta name="author" content="Fabiano Almeida">
     <link rel="icon" href="image/mp_1.ico">
 
     <title>Bolsas e Necessaires</title>
