--- a/home.html
+++ b/home.html
@@ -2,27 +2,37 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Bolsas e Necessaires</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Marita Padin, Bolsas, necessaires, acessórios, moda feminina">
     <meta name="author" content="Fabiano Almeida">
     <link rel="icon" href="image/mp_1.ico">
-
-    <title>Bolsas e Necessaires</title>
-
     <!-- Principal CSS do Bootstrap -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Estilos customizados para esse template -->
     <link href="docs/4.1/examples/carousel/carousel.css" rel="stylesheet">
+    <style>
+    /* Make the image fully responsive */
+    .carousel-inner img {
+        width: 100%;
+        height: 100%;
+    }
+    </style>
   </head>
   <body>
-
     <header>
       <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #F7EEEE;">
         <a class="navbar-brand" href="index.html">Marita Padin</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarCollapse"
+                aria-controls="navbarCollapse"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
@@ -45,24 +55,11 @@
               <a class="nav-link" href="index.html">Contatos</a>
             </li>
           </ul>
-<!--           <form class="form-inline mt-2 mt-md-0">
-
-                    <ul>
-                        <li><a data-scroll href="#overview">A propriedade</a></li>
-                        <li><a data-scroll href="#sponsors">Serviços</a></li>
-                        <li><a data-scroll href="#register">Contato</a></li>
-                        <li><a data-scroll href="#venue">Local</a></li>
-                    </ul>
-
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-          </form> -->
         </div>
       </nav>
     </header>
-
     <main role="main">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div id="myCarousel" class="carousel slide " data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -70,7 +67,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="first-slide" src="image/love_mon_retangulo.png" alt="First slide">
+            <img class="first-slide" src="image/love_mon_retangulo.png" alt="First slide" width="140" height="140">
             <div class="container">
               <div class="carousel-caption text-left">
                 <h1>Dia das Mães</h1>
@@ -80,7 +77,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="second-slide" src="image/alca_lateral_cerejeira_retangulo.jpg" alt="Second slide">
+            <img class="second-slide" src="image/alca_lateral_cerejeira_retangulo.jpg" alt="Second slide" width="140" height="140">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Alça Lateral</h1>
@@ -90,7 +87,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="third-slide" src="image/florais_escura_retangular.jpg" alt="Third slide">
+            <img class="third-slide" src="image/florais_escura_retangular.jpg" alt="Third slide" width="140" height="140">
             <div class="container">
               <div class="carousel-caption text-right">
                 <h1>Coleção Flores</h1>
@@ -110,38 +107,39 @@
         </a>
       </div>
 
-
       <!-- Mensagens de marketing e outras featurezinhas
       ================================================== -->
       <!-- Envolve o resto da página em outro container, para centralizar todo o conteúdo. -->
-    <hr class="featurette-divider" id="colecoes">
-    <div class="container marketing">
-      <!-- Três colunas de texto, abaixo do carousel -->
-      <div class="row">
-        <div class="col-lg-4">
-          <img class="rounded-circle" src="image/love_mon.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Dia das Mães</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="rounded-circle" src="image/mp.png" alt="Generic placeholder image" width="140" height="140">
-          <h2>Marita Padin</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+      <hr class="featurette-divider" id="colecoes">
+      <div class="container marketing">
+
+        <!-- Três colunas de texto, abaixo do carousel -->
+        <div class="row">
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="image/love_mon.jpg" alt="Generic placeholder image" width="140" height="140">
+            <h2>Dia das Mães</h2>
+            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="image/mp.png" alt="Generic placeholder image" width="140" height="140">
+            <h2>Marita Padin</h2>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
           <img class="rounded-circle" src="image/colecao_flores.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Coleções</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-    </div>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+
 
         <!-- COMEÇAM AS MENCIONADAS FEATUREZINHAS xD -->
 
         <hr class="featurette-divider" id="promocao">
+
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">Dia das Mães <span class="text-muted">Sua mãe vai adorar</span></h2>
@@ -181,12 +179,11 @@
 
       </div><!-- /.container -->
 
-
-      <!-- FOOTER -->
-      <footer class="container">
-        <p class="float-right"><a href="#">Voltar ao topo</a></p>
-        <p>&copy; Companhia S.A., 2017-2018 &middot; <a href="#">Privacidade</a> &middot; <a href="#">Termos</a></p>
-      </footer>
+        <!-- FOOTER -->
+        <footer class="container">
+          <p class="float-right"><a href="#">Voltar ao topo</a></p>
+          <p>&copy; Companhia S.A., 2017-2018 &middot; <a href="#">Privacidade</a> &middot; <a href="#">Termos</a></p>
+        </footer>
     </main>
 
     <!-- Principal JavaScript do Bootstrap
