--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="image/mp_1.ico">
     <!-- Principal CSS do Bootstrap -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     <!-- Estilos customizados para esse template -->
     <link href="docs/4.1/examples/carousel/carousel.css" rel="stylesheet">
